minor commentary changes

--- a/ShinyGo/ShinyGO_analysis/module_pathways_1.ipynb
+++ b/ShinyGo/ShinyGO_analysis/module_pathways_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,9 +707,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dataenv",
+   "display_name": "ShinyGOenv",
    "language": "python",
-   "name": "dataenv"
+   "name": "shinygoenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
