fixed to example_Data path

--- a/geneontologies/get_KEGGnums.ipynb
+++ b/geneontologies/get_KEGGnums.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,37 +73,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>P43274</td>\n",
-       "      <td>50709</td>\n",
-       "      <td>H1f4</td>\n",
+       "      <td>A2A5R2</td>\n",
+       "      <td>99371</td>\n",
+       "      <td>Arfgef2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>P62137</td>\n",
-       "      <td>19045</td>\n",
-       "      <td>Ppp1ca</td>\n",
+       "      <td>E9PY46</td>\n",
+       "      <td>106633</td>\n",
+       "      <td>Ift140</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>P70670</td>\n",
-       "      <td>17938</td>\n",
-       "      <td>Naca</td>\n",
+       "      <td>O54829</td>\n",
+       "      <td>24012</td>\n",
+       "      <td>Rgs7</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q6NVF0</td>\n",
-       "      <td>320634</td>\n",
-       "      <td>Ocrl</td>\n",
+       "      <td>O70325</td>\n",
+       "      <td>625249</td>\n",
+       "      <td>Gpx4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q6P549</td>\n",
-       "      <td>16332</td>\n",
-       "      <td>Inppl1</td>\n",
+       "      <td>P43274</td>\n",
+       "      <td>50709</td>\n",
+       "      <td>H1f4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -118,35 +118,35 @@
        "      <td>P28658</td>\n",
        "      <td>54138</td>\n",
        "      <td>Atxn10</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1953</th>\n",
        "      <td>Q9CVB6</td>\n",
        "      <td>76709</td>\n",
        "      <td>Arpc2</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1954</th>\n",
        "      <td>Q9WVG6</td>\n",
        "      <td>59035</td>\n",
        "      <td>Carm1</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1955</th>\n",
        "      <td>Q9Z1Z0</td>\n",
        "      <td>56041</td>\n",
        "      <td>Uso1</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1956</th>\n",
        "      <td>Q9D7X1</td>\n",
        "      <td>67516</td>\n",
        "      <td>Kctd4</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -154,37 +154,37 @@
        "</div>"
       ],
       "text/plain": [
-       "     UniProt  Entrez  Symbol  Membership\n",
-       "0     P43274   50709    H1f4           0\n",
-       "1     P62137   19045  Ppp1ca           0\n",
-       "2     P70670   17938    Naca           0\n",
-       "3     Q6NVF0  320634    Ocrl           0\n",
-       "4     Q6P549   16332  Inppl1           0\n",
-       "...      ...     ...     ...         ...\n",
-       "1952  P28658   54138  Atxn10          41\n",
-       "1953  Q9CVB6   76709   Arpc2          41\n",
-       "1954  Q9WVG6   59035   Carm1          41\n",
-       "1955  Q9Z1Z0   56041    Uso1          41\n",
-       "1956  Q9D7X1   67516   Kctd4          41\n",
+       "     UniProt  Entrez   Symbol  Membership\n",
+       "0     A2A5R2   99371  Arfgef2           0\n",
+       "1     E9PY46  106633   Ift140           0\n",
+       "2     O54829   24012     Rgs7           0\n",
+       "3     O70325  625249     Gpx4           0\n",
+       "4     P43274   50709     H1f4           0\n",
+       "...      ...     ...      ...         ...\n",
+       "1952  P28658   54138   Atxn10          45\n",
+       "1953  Q9CVB6   76709    Arpc2          45\n",
+       "1954  Q9WVG6   59035    Carm1          45\n",
+       "1955  Q9Z1Z0   56041     Uso1          45\n",
+       "1956  Q9D7X1   67516    Kctd4          45\n",
        "\n",
        "[1957 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "KOGENE = 'LRRK2'\n",
-    "modules_file = f\"{parent}/tables/{KOGENE}-TMT-Module-Results.xlsx\"\n",
+    "modules_file = f\"{parent}/example_data/tables/{KOGENE}-TMT-Module-Results.xlsx\"\n",
     "module_df = pd.read_excel(modules_file, engine='openpyxl')\n",
     "module_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:25<00:00,  1.30s/it]\n"
+      "100%|██████████| 20/20 [00:26<00:00,  1.31s/it]\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,43 +279,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>A2A5R2</td>\n",
+       "      <td>99371</td>\n",
+       "      <td>Arfgef2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>K18442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E9PY46</td>\n",
+       "      <td>106633</td>\n",
+       "      <td>Ift140</td>\n",
+       "      <td>0</td>\n",
+       "      <td>K19672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>O54829</td>\n",
+       "      <td>24012</td>\n",
+       "      <td>Rgs7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>K16449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>O70325</td>\n",
+       "      <td>625249</td>\n",
+       "      <td>Gpx4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>K05361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>P43274</td>\n",
        "      <td>50709</td>\n",
        "      <td>H1f4</td>\n",
        "      <td>0</td>\n",
        "      <td>K11275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>P62137</td>\n",
-       "      <td>19045</td>\n",
-       "      <td>Ppp1ca</td>\n",
-       "      <td>0</td>\n",
-       "      <td>K06269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>P70670</td>\n",
-       "      <td>17938</td>\n",
-       "      <td>Naca</td>\n",
-       "      <td>0</td>\n",
-       "      <td>K03626</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Q6NVF0</td>\n",
-       "      <td>320634</td>\n",
-       "      <td>Ocrl</td>\n",
-       "      <td>0</td>\n",
-       "      <td>K01099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Q6P549</td>\n",
-       "      <td>16332</td>\n",
-       "      <td>Inppl1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>K15909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -330,7 +330,7 @@
        "      <td>P28658</td>\n",
        "      <td>54138</td>\n",
        "      <td>Atxn10</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "      <td>K19323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -338,7 +338,7 @@
        "      <td>Q9CVB6</td>\n",
        "      <td>76709</td>\n",
        "      <td>Arpc2</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "      <td>K05758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -346,7 +346,7 @@
        "      <td>Q9WVG6</td>\n",
        "      <td>59035</td>\n",
        "      <td>Carm1</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "      <td>K05931</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -354,7 +354,7 @@
        "      <td>Q9Z1Z0</td>\n",
        "      <td>56041</td>\n",
        "      <td>Uso1</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "      <td>FAIL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -362,7 +362,7 @@
        "      <td>Q9D7X1</td>\n",
        "      <td>67516</td>\n",
        "      <td>Kctd4</td>\n",
-       "      <td>41</td>\n",
+       "      <td>45</td>\n",
        "      <td>FAIL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -371,23 +371,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     UniProt  Entrez  Symbol  Membership KEGG_Ortholog\n",
-       "0     P43274   50709    H1f4           0        K11275\n",
-       "1     P62137   19045  Ppp1ca           0        K06269\n",
-       "2     P70670   17938    Naca           0        K03626\n",
-       "3     Q6NVF0  320634    Ocrl           0        K01099\n",
-       "4     Q6P549   16332  Inppl1           0        K15909\n",
-       "...      ...     ...     ...         ...           ...\n",
-       "1952  P28658   54138  Atxn10          41        K19323\n",
-       "1953  Q9CVB6   76709   Arpc2          41        K05758\n",
-       "1954  Q9WVG6   59035   Carm1          41        K05931\n",
-       "1955  Q9Z1Z0   56041    Uso1          41          FAIL\n",
-       "1956  Q9D7X1   67516   Kctd4          41          FAIL\n",
+       "     UniProt  Entrez   Symbol  Membership KEGG_Ortholog\n",
+       "0     A2A5R2   99371  Arfgef2           0        K18442\n",
+       "1     E9PY46  106633   Ift140           0        K19672\n",
+       "2     O54829   24012     Rgs7           0        K16449\n",
+       "3     O70325  625249     Gpx4           0        K05361\n",
+       "4     P43274   50709     H1f4           0        K11275\n",
+       "...      ...     ...      ...         ...           ...\n",
+       "1952  P28658   54138   Atxn10          45        K19323\n",
+       "1953  Q9CVB6   76709    Arpc2          45        K05758\n",
+       "1954  Q9WVG6   59035    Carm1          45        K05931\n",
+       "1955  Q9Z1Z0   56041     Uso1          45          FAIL\n",
+       "1956  Q9D7X1   67516    Kctd4          45          FAIL\n",
        "\n",
        "[1957 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,12 +401,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "module_df.to_csv(f\"{parent}/tables/{KOGENE}_moduleResults_KEGGortholog.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
