saving to example_data

--- a/geneontologies/get_KEGGnums.ipynb
+++ b/geneontologies/get_KEGGnums.ipynb
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module_df.to_csv(f\"{parent}/tables/{KOGENE}_moduleResults_KEGGortholog.csv\")"
+    "module_df.to_csv(f\"{parent}/example_data/tables/{KOGENE}_moduleResults_KEGGortholog.csv\") ## this is going in example_data/ change it to your tables/ dir. "
    ]
   },
   {
